Fix: Visible toolbox on customize page

--- a/css/floatingToolbox.css
+++ b/css/floatingToolbox.css
@@ -1,9 +1,11 @@
 /* Floating Toolbox */
 
-#navigator-toolbox {
+#main-window:not([customizing="true"]) #navigator-toolbox {
     display: grid;
     transition: transform 85ms linear, opacity 85ms linear !important;
     transform-origin: top;
     transform: rotateX(75deg);
     opacity: 0;
 }
+
+
