--- a/css/responsiveNavbar.css
+++ b/css/responsiveNavbar.css
@@ -11,8 +11,8 @@
 #navigator-toolbox:hover,
 #navigator-toolbox:focus-within {
     transition-delay: 33ms !important;
-    transform: rotateX(0);
-    opacity: 1;
+    transform: rotateX(0) !important;
+    opacity: 1 !important;
 }
 
 #navigator-toolbox > * {
